[package]
name = "upl"
version = "0.1.0"
authors = ["7ap"]
edition = "2021"
description = "The intuitive command-line file uploader."
documentation = "https://docs.rs/upl"
readme = "README.md"
repository = "https://github.com/7ap/upl"
license = "MIT"


[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking", "multipart"] }
