[package]
name = "upl"
version = "0.1.1"
authors = ["7ap"]
edition = "2021"
description = "The intuitive command-line file uploader."
documentation = "https://docs.rs/upl"
readme = "README.md"
repository = "https://github.com/7ap/upl"
license = "MIT"

[dependencies]
clap = { version = "4.0.16", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
